.devops/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: PROJECT_ID
  namespace: PROJECT_NAMESPACE
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: 15m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '600s'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600s'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600s'
    # nginx.ingress.kubernetes.io/whitelist-source-range: 4.201.50.47/32
spec:
  tls:
    - hosts:
        - PROJECT_DOMAIN
      secretName: PROJECT_ID
  rules:
  - host: PROJECT_DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: PROJECT_ID
            port:
              number: PROJECT_PORT
